...
  };
  return (
    <>
      <View style={styles.outerContainer}>
        <View style={styles.header}>
          <Text style={styles.title}>Let&apos;s Begin</Text>
          <Text style={styles.subtitle}>Create an Account</Text>
        </View>
      </View>
      <View style={styles.innerContainer}>
        <View style={styles.inputContainer}>
          <Text style={styles.title}>Sign Up</Text>
          <Text>Full Name</Text>
...
            secureTextEntry={!passwordVisible}
            onChangeText={(text) => dispatch(setPassword(text))}
            value={password}
          />
          {password && (
            <>
              <Text>Confirm Password</Text>
              <TextInput
                style={styles.input}
                placeholder="Confirm Password"
                onChangeText={(text) => dispatch(setConfirmPassword(text))}
                secureTextEntry
                value={confirm_password}
...
